<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/ic_chats"
        android:title="@string/nav_chats" />
    <item
        android:id="@+id/nav_calls"
        android:icon="@drawable/ic_calls"
        android:title="@string/nav_calls" />
    <item
        android:id="@+id/nav_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/nav_contacts" />
    <item
        android:id="@+id/nav_transfer"
        android:icon="@drawable/ic_transfer"
        android:title="@string/nav_transfer" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
